products wrapped in main, style fix

--- a/src/pages/Products/products.module.css
+++ b/src/pages/Products/products.module.css
@@ -1,45 +1,44 @@
-.products_card h1 {
-	text-align: center;
-	text-transform: uppercase;
+.products_title {
+    text-align: center;
+    text-transform: uppercase;
 }
 
 .products_card {
-	display: grid;
-	max-width: 80%;
-	grid-template-columns: repeat(auto-fit,
-			minmax(300px, 1fr));
-	grid-gap: 1rem;
-	margin: 5rem auto;
+    display: grid;
+    max-width: 80%;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-gap: 1rem;
+    margin: 5rem auto;
 }
 
 .card {
-	position: relative;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-around;
-	align-items: left;
-	border: none;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: left;
+    border: none;
 }
 
 .img_container img {
-	display: block;
-	width: 300px;
-	height: 300px;
-	object-fit: cover;
+    display: block;
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
 }
 
 .blue_heart {
-	position: absolute;
-	right: 55px;
-	width: 40px;
-	height: 40px;
-	font-size: 2rem;
+    position: absolute;
+    right: 55px;
+    width: 40px;
+    height: 40px;
+    font-size: 2rem;
 }
 
 .brand {
-	text-transform: uppercase;
+    text-transform: uppercase;
 }
 
 .price {
-	font-weight: bold;
+    font-weight: bold;
 }
